fixing tick mark spacing

--- a/static/slider/css/slider.css
+++ b/static/slider/css/slider.css
@@ -167,7 +167,6 @@
   margin-right: 43.2px;*/
 
   /*for 256px: */
-  margin-left: 25.4px;
 }
 
 .slider-tick-label.left-side {
